--- a/Chan/pom.xml
+++ b/Chan/pom.xml
@@ -78,6 +78,46 @@
 			<version>3.0.3</version>
 			<scope>test</scope>
 		</dependency>
+<!--		<dependency>
+    		<groupId>jstl</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>-->
+		<dependency>
+        	<groupId>org.apache.tomcat.embed</groupId>
+        	<artifactId>tomcat-embed-jasper</artifactId>
+    	</dependency>
+    	
+    	<!-- spring boot 3버전 이상에서 jstl사용시 아래 사용-->
+    	<!--<dependency>
+        	<groupId>org.glassfish.web</groupId>
+        	<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+    	</dependency>-->
+    	
+    	<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp</groupId>
+			<artifactId>jakarta.servlet.jsp-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.el</groupId>
+			<artifactId>jakarta.el-api</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp.jstl</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		</dependency>
+    	
 	</dependencies>
 
 	<build>
