--- a/Chan/src/main/resources/application.properties
+++ b/Chan/src/main/resources/application.properties
@@ -2,14 +2,19 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-# DB URL
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC
+#thymeleaf
+spring.thymeleaf.prefix=resources/
+spring.thymeleaf.suffix=.thtml
+spring.thymeleaf.view-names=th/*
 
-# DB NAME
-spring.datasource.username=root
-
-# DB PWD
-spring.datasource.password=password
-
-# DB CLASS
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## DB URL
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC
+#
+## DB NAME
+#spring.datasource.username=root
+#
+## DB PWD
+#spring.datasource.password=password
+#
+## DB CLASS
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
