--- a/Chan/pom.xml
+++ b/Chan/pom.xml
@@ -117,7 +117,12 @@
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 		</dependency>
-    	
+		
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
