--- a/Chan/src/main/resources/application.properties
+++ b/Chan/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.suffix=.thtml
 spring.thymeleaf.view-names=th/*
 
 # DB URL
-spring.datasource.url=jdbc:mysql://localhost:3306/sample?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sample?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 # DB NAME
 spring.datasource.username=root
