--- a/Chan/pom.xml
+++ b/Chan/pom.xml
@@ -123,6 +123,12 @@
 		    <artifactId>commons-codec</artifactId>
 		</dependency>
 		
+		<!-- commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
