--- a/Chan/src/main/resources/application.properties
+++ b/Chan/src/main/resources/application.properties
@@ -18,3 +18,12 @@ spring.datasource.password=1234
 
 # DB CLASS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+###########파일업로드 관련 설정###############
+## 파일업로드 사용
+spring.servlet.multipart.enabled=true
+## 파일 하나당 최대크기
+spring.servlet.multipart.max-file-size=10MB
+## 파일 최대 가능 업로드
+spring.servlet.multipart.max-request-size=50MB
