--- a/Chan/pom.xml
+++ b/Chan/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
+		<version>3.2.11</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.chan</groupId>
@@ -139,6 +139,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-surefire-plugin</artifactId>
+		        <configuration>
+		        <skipTests>true</skipTests>
+		        </configuration>
+		    </plugin>
+			
 		</plugins>
 	</build>
 
