--- a/Chan/src/main/resources/application.properties
+++ b/Chan/src/main/resources/application.properties
@@ -8,12 +8,15 @@ spring.thymeleaf.suffix=.thtml
 spring.thymeleaf.view-names=th/*
 
 # DB URL
+#spring.datasource.url=jdbc:mysql://34.64.187.13:3306/kchan?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.url=jdbc:mysql://localhost:3306/sample?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 # DB NAME
+#spring.datasource.username=ghkswp150
 spring.datasource.username=root
 
 # DB PWD
+#spring.datasource.password=dkssud150
 spring.datasource.password=1234
 
 # DB CLASS
